--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .printers .printer-card {
+  display: flex;
   width: calc(100% - 2rem);
   border: 1px solid darkgray;
   padding: 1rem;
@@ -7,8 +8,52 @@
 }
 
 .printers .printer-card.add {
-  display: flex;
   flex-direction: column;
   align-items: center;
   font-size: 1.2rem;
+}
+
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.login > * {
+  margin-top: 1rem;
+}
+
+.new-printer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.new-printer * {
+  width: calc(100vw - 8rem);
+  margin-top: 1rem;
+}
+
+input {
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  border: 1px solid darkgray;
+  width: calc(100vw - 8rem);
+}
+
+button {
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  background: #4253ce;
+  color: white;
+}
+
+select {
+  width: 50%;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  border-color: darkgray;
 }
